# ClearUnit

./: CMakeLists.txt  Makefile  README.md  cppthrow_example.cpp  example.c  generate_tests.cmake
include/: test.h
src/: main.c  test.c
